--- a/style.css
+++ b/style.css
@@ -13,13 +13,18 @@ body {
 
 h1{
   font-size: 30px;
+  background-color:rgb(222, 255, 245);
+}
+h2{
+  font-family:fantasy;
+  background-color:rgb(255, 245, 250);
 }
 
 #myCanvas {
   background-image: url("https://seaviewinfo.com/wp-content/uploads/2018/07/SeaScape.jpg");
   background-size: 600px 400px;
   border-radius: 300px;
-  border: 5px solid white;
+  border: 10px solid lightpink;
 }
 
 
